# claq

./: .gitattributes  .gitignore  .project  claq.cabal  readme.txt
doc/: claq.tex
examples/: add2.claq  add2woc.claq
examples/error/: cycle.claq  duplicate.claq  notfound1.claq  notfound2.claq
src/: CommandLine.hs  Compile.hs  Main.hs  Util.hs
src/Data/: ClassicalCircuit.hs  DAG.hs  ExitF.hs
src/Language/Claq/: Parser.hs  Syntax.hs
