name:           claq
version:        0.1
cabal-version:  >= 1.10
build-type:     Simple
author:         Tsuyoshi Ito
synopsis:       Classical-to-quantum circuit synthesizer
license:        BSD3
license-file:   LICENSE
copyright:      Copyright (c) 2013 NEC Laboratories America, Inc.

executable claq
  default-language: Haskell2010
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   hacq,
                   unordered-containers,
                   bytestring,
                   parsec,
                   free
  ghc-options:     -Wall
  other-extensions:
                    DeriveFoldable,
                    DeriveFunctor,
                    DeriveTraversable,
                    FlexibleContexts,
                    MultiParamTypeClasses,
                    StandaloneDeriving,
                    UndecidableInstances
  other-modules:
                CommandLine,
                Compile,
                Data.ClassicalCircuit,
                Data.DAG,
                Data.ExitF,
                Language.Claq.Parser,
                Language.Claq.Syntax,
                Util
